# MCP-F1

./: .gitignore  MCP_INSPECTOR_GUIDE.md  Makefile  README.md  USAGE.md  install-inspector.sh  mcp_test.py  pyproject.toml  quick-start.sh  run_tests.py  setup.py  test_client.py  test_deps.py  test_startup.py
f1_mcp_server/: __init__.py  auth.py  combined_server.py  http_server.py  server.py
