[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-mcp-server"
version = "0.1.0"
description = "MCP server for Formula 1 data using FastF1"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mcp>=0.9.0",
    "fastf1>=3.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

[project.scripts]
f1-mcp-server = "f1_mcp_server.server:main"
f1-http-server = "f1_mcp_server.combined_server:main"